<resources>
    <string name="app_name">Practicum-Android-Diploma</string>

    <!--    BottomBar-->
    <string name="main_title">Главная</string>
    <string name="favourites_title">Избранное</string>
    <string name="team_title">Команда</string>

    <!--    Названия экранов-->
    <string name="country_selection_title">Выбор страны</string>
    <string name="region_selection_title">Выбор региона</string>
    <string name="industry_selection_title">Выбор отрасли</string>
    <string name="work_place_selection_title">Выбор места работы</string>
    <string name="filters_title">Настройки фильтрации</string>
    <string name="vacancy_details_title">Вакансия</string>
    <string name="vacancy_search_title">Поиск вакансий</string>
    <string name="search_hint">Введите запрос</string>
    <string name="no_internet">Нет интернета</string>
    <string name="no_vacancies">Таких вакансий нет</string>
    <string name="error_fetching_vacancies">Не удалось получить\n список вакансий</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="vacancy_not_found">Вакансия не найдена или удалена</string>
    <string name="pictures_ratio">1:1</string>
    <string name="placeholder_picture_desc">Иллюстрация состояния экрана</string>

    <!--    Экран настроек фильтрации-->
    <string name="work_place">Место работы</string>
    <string name="industry">Отрасль</string>

    <string name="salary">Ожидаемая зарплата</string>
    <string name="input_salary">Введите сумму</string>
    <string name="do_not_show_without_salary">Не показывать без зарплаты</string>
    <string name="apply">Применить</string>
    <string name="reset">Сбросить</string>
    <string name="back_button_desc">Кнопка назад</string>
    <string name="go_to_selection">Перейти к выбору</string>
    <string name="clear_button_desc">Очистить поле</string>

    <string name="country">Страна</string>
    <string name="region">Регион</string>

    <string name="select_button_text">Выбрать</string>

    <!-- Названия кнопок -->
    <string name="choose">Выбрать</string>

    <!--    Экран команда-->
    <string name="team_subtitle">Над приложением работали</string>

    <!-- Экран избранного -->
    <string name="no_items">Список пуст</string>
    <string name="organization_icon">Логотип организации</string>
    <string name="salary_not_specified">Зарплата не указана</string>
    <string name="no_suitable_app">Нет подходящего приложения</string>
    <string name="error_occurred">Проверьте подключение к интернету</string>
    <string name="no_region">Такого региона нет</string>

    <!--    Текст для заглушек-->
    <string name="placeholder_empty_area">Такого региона нет</string>
    <string name="placeholder_error_area">Не удалось получить\n список</string>

    <!--    Экран деталей вакансии-->
    <string name="contacts_title">Контакты:</string>
    <string name="expirience_title">Требуемый опыт работы:</string>
    <string name="founded_vacancies_count">Найдено %s вакансий</string>

    <!--    Экран фильтра отрасль-->
    <string name="enter_industries">Введите отрасль</string>
    <string name="no_industry">Такой отрасли нет</string>

</resources>
