<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.VacancySearchFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glLeftBorder_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/padding_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glRightBorder_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/padding_16" />

    <TextView
        android:id="@+id/searchTitle"
        style="@style/TextDisplayMedium22"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_16"
        android:text="@string/vacancy_search_title"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintEnd_toStartOf="@+id/filterButton"
        app:layout_constraintStart_toStartOf="@id/glLeftBorder_16"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/filterButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="@dimen/padding_4"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/filters_title"
        android:focusable="true"
        android:padding="@dimen/padding_12"
        android:src="@drawable/ic_filter_off_24"
        app:layout_constraintBottom_toBottomOf="@+id/searchTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchTitle" />

    <EditText
        android:id="@+id/searchEditText"
        style="@style/inputEditTextSearchStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_8"
        android:drawableEnd="@drawable/ic_search_24"
        android:hint="@string/search_hint"
        android:imeOptions="actionSearch"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toStartOf="@id/glRightBorder_16"
        app:layout_constraintStart_toStartOf="@id/glLeftBorder_16"
        app:layout_constraintTop_toBottomOf="@+id/searchTitle" />

    <TextView
        android:id="@+id/tvResultInfo"
        style="@style/TextDisplayMedium16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_16"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/glRightBorder_16"
        app:layout_constraintStart_toStartOf="@id/glLeftBorder_16"
        app:layout_constraintTop_toBottomOf="@id/searchEditText"
        tools:text="Найдено 10 вакансий"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/placeholderContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/glRightBorder_16"
        app:layout_constraintStart_toEndOf="@id/glLeftBorder_16"
        app:layout_constraintTop_toBottomOf="@id/tvResultInfo">

        <ImageView
            android:id="@+id/placeholderImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/main_screen" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
