<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/workPlaceSelectionFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.filter.FilterRegionFragment">

    <!-- ТУЛБАР -->
    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:paddingHorizontal="16dp"
        android:src="@drawable/ic_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/toolbarTitle"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:text="@string/work_place_selection_title"
        android:textAppearance="@style/TextDisplayMedium22"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/backButton"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- БЛОК: СТРАНА -->
    <View
        android:id="@+id/selectCountryButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/toolbarTitle" />

    <TextView
        android:id="@+id/countryHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/country"
        android:textAppearance="@style/TextDisplayRegular12"
        android:textColor="?attr/colorControlNormal"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/countryText"
        app:layout_constraintEnd_toStartOf="@id/countryActionIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/selectCountryButton"
        app:layout_constraintVertical_chainStyle="packed"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/countryText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/country"
        android:textAppearance="@style/TextDisplayRegular16"
        android:textColor="?attr/colorControlNormal"
        app:layout_constraintBottom_toBottomOf="@id/selectCountryButton"
        app:layout_constraintEnd_toStartOf="@id/countryActionIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/countryHint"
        tools:text="Россия"
        tools:textColor="?attr/colorOnSurface" />

    <ImageView
        android:id="@+id/countryActionIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_arrow_forward_24"
        app:layout_constraintBottom_toBottomOf="@id/selectCountryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/selectCountryButton"
        app:tint="?attr/colorOnSurface" />

    <!-- БЛОК: РЕГИОН -->
    <View
        android:id="@+id/selectRegionButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/selectCountryButton" />

    <TextView
        android:id="@+id/regionHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/region"
        android:textAppearance="@style/TextDisplayRegular12"
        android:textColor="?attr/colorControlNormal"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/regionText"
        app:layout_constraintEnd_toStartOf="@id/regionActionIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/selectRegionButton"
        app:layout_constraintVertical_chainStyle="packed"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/regionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/region"
        android:textAppearance="@style/TextDisplayRegular16"
        android:textColor="?attr/colorControlNormal"
        app:layout_constraintBottom_toBottomOf="@id/selectRegionButton"
        app:layout_constraintEnd_toStartOf="@id/regionActionIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regionHint"
        tools:text="Москва"
        tools:textColor="?attr/colorOnSurface" />

    <ImageView
        android:id="@+id/regionActionIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_arrow_forward_24"
        app:layout_constraintBottom_toBottomOf="@id/selectRegionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/selectRegionButton"
        app:tint="?attr/colorOnSurface" />

    <!-- НИЖНЯЯ КНОПКА -->
    <Button
        style="@style/ButtonStyle"
        android:id="@+id/selectButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="@dimen/padding_24"
        android:text="@string/select_button_text"
        app:layout_constraintBottom_toBottomOf="parent"

        android:elevation="0dp"
        app:elevation="0dp"
        android:stateListAnimator="@null"/>

</androidx.constraintlayout.widget.ConstraintLayout>
